--- a/hooked-on-svn/pom.xml
+++ b/hooked-on-svn/pom.xml
@@ -80,6 +80,11 @@
             <artifactId>pojava</artifactId>
             <version>2.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.8.7</version>
+        </dependency>
 
     </dependencies>
 
