added APIs for parameterized plugins and notifier plugins

--- a/hooked-plugin-api/pom.xml
+++ b/hooked-plugin-api/pom.xml
@@ -11,6 +11,12 @@
 
     <artifactId>hooked-plugin-api</artifactId>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
