--- a/hooked-on-svn/pom.xml
+++ b/hooked-on-svn/pom.xml
@@ -61,6 +61,11 @@
             <scope>plugin</scope>
         </dependency>
         <dependency>
+            <groupId>org.wickedsource.hooked.plugins</groupId>
+            <artifactId>webhook-notifier-plugin</artifactId>
+            <scope>plugin</scope>
+        </dependency>
+        <dependency>
             <groupId>org.tmatesoft.svnkit</groupId>
             <artifactId>svnkit</artifactId>
             <version>1.7.8</version>
