--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.wickedsource.hooked.plugins</groupId>
+                <artifactId>webhook-notifier-plugin</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.testng</groupId>
                 <artifactId>testng</artifactId>
                 <version>6.8.7</version>
