--- a/hooked-plugin-api/pom.xml
+++ b/hooked-plugin-api/pom.xml
@@ -15,6 +15,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
