removed isDebugEnabled() since it clutters the code and we don't have performance issues

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
                 <artifactId>testng</artifactId>
                 <version>6.8.7</version>
             </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.5</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
