--- a/hooked-plugin-api/pom.xml
+++ b/hooked-plugin-api/pom.xml
@@ -13,6 +13,10 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <scope>test</scope>
