added "local" profile for installing the hooking locally after build

--- a/hooked-on-svn/pom.xml
+++ b/hooked-on-svn/pom.xml
@@ -73,8 +73,37 @@
             <version>6.8.7</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>local</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.7</version>
+                        <executions>
+                            <execution>
+                                <phase>install</phase>
+                                <configuration>
+                                    <target>
+                                        <unzip src="${project.build.directory}/${project.build.finalName}.zip"
+                                               dest="${local.install.dir}"/>
+                                    </target>
+                                </configuration>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+
+        </profile>
+
+    </profiles>
 
 
 </project>
