--- a/hooked-plugin-api/pom.xml
+++ b/hooked-plugin-api/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.wickedsource</groupId>
+            <artifactId>diffparser</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <scope>test</scope>
